--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@ html{
     margin: 0;
 }
 
+:root{
+    --primary: #2097d8;
+    --primary-ligth: #20b6d8;
+    --secondary: #20d7d8;
+    --secondary-ligth: #7ce8e5;
+    --light: #beefed;
+}
+
+
 body{
     background-color: lightslategray;
 
@@ -96,6 +105,16 @@ body{
 .inferior img{
     width: 75px;
 }
+
+.inferior button:hover{
+    background-color: var(--primary);
+    -webkit-transform:scale(1.1);
+    -moz-transform:scale(1.1);
+    -ms-transform:scale(1.1);
+    -o-transform:scale(1.1);
+    transform:scale(1.1);
+}
+
 
 .inferior button{
     width: 100px;
@@ -203,6 +222,15 @@ body{
     .inferior img{
         width: 50px;
         
+    }
+
+    .inferior button:hover{
+        background-color: var(--primary);
+        -webkit-transform:scale(1.1);
+        -moz-transform:scale(1.1);
+        -ms-transform:scale(1.1);
+        -o-transform:scale(1.1);
+        transform:scale(1.1);
     }
     
     .inferior button{
