--- a/css/style.css
+++ b/css/style.css
@@ -135,10 +135,16 @@ body{
     background-color: chartreuse;
 }
 
-@media (max-width: 500px){
+@media (max-width: 640px){
+
+    body{
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+    }
 
     .contenedor-padre{
-        width: 100%;
+        min-width: 100%;
         height: 100%;
         background-color: #4493a5;
         margin: auto;
@@ -209,14 +215,13 @@ body{
     
     .inferior {
         display: grid;
-        width: 80%;
-        height: 90;
+        width: 60%;
         border-radius: 10px;
         background-color: #f2f2f2;
         grid-template-columns: 120px 110px 170px;
         grid-template-rows: 2fr 1fr;
         place-content: center;
-        margin-left: 20px;
+        align-content: center;
     }
     
     .inferior img{
@@ -253,3 +258,72 @@ body{
     }
 
 }
+
+@media only screen and (min-width: 641px) and (max-width: 950px){
+
+
+    body{
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+    }
+
+    .contenedor-padre{
+        border-style: outset;
+        min-width: 100%;
+    }
+
+    .nav{
+        justify-content: center;
+    }
+
+    .container__main{
+        display: block;
+        grid-template-columns: 1fr;
+        max-width: 100%;
+        padding: 20px;
+    }
+
+    .card{
+        min-width: 100%;
+        margin: 0%;
+        padding: 0%;
+        
+    }
+
+    .card img{
+        width: 100%;
+        height: auto;
+    }
+
+    .card__features{
+        margin-top: -60px;
+        min-width: 100%;
+    }
+
+    .card__data{
+        padding-top: 60px;
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
+
+    .card__type{
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .footer{
+        display: grid;
+    }
+
+    .others{
+        text-align: center;
+    }
+
+    .cards{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+
